--- a/List of Exercises for getting started at some geospatial data analysis.ipynb
+++ b/List of Exercises for getting started at some geospatial data analysis.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "## Considering [this](https://www.kaggle.com/c/new-york-city-taxi-fare-prediction/) dataset about taxi trips in New York and selecting one month of data (any). \n",
     "* Do we have any problematic data? i.e., that needs preprocessing somehow? (Here's a data analysis [kernel](https://www.kaggle.com/breemen/nyc-taxi-fare-data-exploration) for some examples)\n",
+    "* How could you make a rule for trip distance outliers? (Percentiles? IQR? Geographic boundary?)\n",
     "* What is the average haversine distance for all trips? \n",
     "* Average haversine distance for each day of the week (use pandas groupby)\n",
     "* Considering a price of 1.5 dollars/km, what is the average revenue for each day of the week?\n",
@@ -27,7 +28,6 @@
     "* Plot 10 drop off hotspots for trips that happened between 07:00 to 10:00 and another map plotting 10 drop off hotspots for trips that happened between 17:00 to 20:00\n",
     "* Can you think a way to find out (approximately) the 3 most popular taxi routes?\n",
     "\n",
-    "  \n",
     "  \n",
     "\n"
    ]
@@ -64,9 +64,36 @@
     "\n",
     "## Why haversine/vincenty distances are not reliable sources of route distance?\n",
     "\n",
-    "## Setting up OSM router (take a look )\n",
-    "* What're it's main functionalities? Can you explain them? "
+    "## Setting up OSM router (take a look at [this](https://github.com/caiomiyashiro/geospatial_data_analysis/blob/master/ORSM%20Test.ipynb) example)\n",
+    "* What're the [API's](http://project-osrm.org/docs/v5.5.1/api/#general-options) main functionalities? Can you explain them? \n",
+    "* Using the [Github](https://github.com/caiomiyashiro/geospatial_data_analysis/blob/master/ORSM%20Test.ipynb) example, can you set up a router and predict the route between two points in Berlin?\n",
+    "\n",
+    "## Optional Advanced - All these operations you've done when [setting the ORSM router](#Setting-up-OSM-router-(take-a-look-at-this-example)) where preparing the OSM pbf file "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random thoughts\n",
+    "\n",
+    "## Have you seen interesting applications for NLP in the mobility sector? Could you add random potentials thoughts that you've seen?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
