--- a/List of Exercises for getting started at some geospatial data analysis.ipynb
+++ b/List of Exercises for getting started at some geospatial data analysis.ipynb
@@ -136,7 +136,7 @@
     "## Have you seen interesting applications for NLP in the mobility sector? Could you add random potentials thoughts that you've seen?\n",
     "* Simple word count --> What are the main complains this week? Topic or word count, together with average emotion (usually negative because people don't go to the internet to review small things they liked usually)\n",
     "\n",
-    "* What else?"
+    "* What are cool thinks (paper, process, tool, etc...) that you think that it could bring value to the team in general?"
    ]
   },
   {
