--- a/List of Exercises for getting started at some geospatial data analysis.ipynb
+++ b/List of Exercises for getting started at some geospatial data analysis.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# List of Exercises for getting started at some geospatial data analysis\n",
     "\n",
+    "Markdown Tips: https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Working%20With%20Markdown%20Cells.html\n",
     "## Intro\n",
     "* What is a Latitude? What is a Longitude?\n",
     "\n",
