--- a/AMLD-2020/Helper Notebook AMLD 2020.ipynb
+++ b/AMLD-2020/Helper Notebook AMLD 2020.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,52 +68,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11.3</td>\n",
-       "      <td>2010-04-16 13:02:00-04:00</td>\n",
-       "      <td>-73.972412</td>\n",
-       "      <td>40.781231</td>\n",
-       "      <td>-73.989189</td>\n",
-       "      <td>40.758373</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13.3</td>\n",
-       "      <td>2010-08-17 23:46:00-04:00</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12.9</td>\n",
-       "      <td>2011-04-09 10:11:00-04:00</td>\n",
-       "      <td>-74.008331</td>\n",
-       "      <td>40.725842</td>\n",
-       "      <td>-73.983200</td>\n",
-       "      <td>40.767673</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2009-01-23 02:28:00-05:00</td>\n",
+       "      <td>-73.996071</td>\n",
+       "      <td>40.732605</td>\n",
+       "      <td>-73.980675</td>\n",
+       "      <td>40.761864</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2014-01-04 16:11:00-05:00</td>\n",
+       "      <td>-73.977638</td>\n",
+       "      <td>40.752346</td>\n",
+       "      <td>-73.970390</td>\n",
+       "      <td>40.768867</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2015-06-21 21:54:24-04:00</td>\n",
+       "      <td>-74.000076</td>\n",
+       "      <td>40.728611</td>\n",
+       "      <td>-73.988731</td>\n",
+       "      <td>40.722172</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2012-11-26 04:49:00-05:00</td>\n",
-       "      <td>-73.994148</td>\n",
-       "      <td>40.751560</td>\n",
-       "      <td>-73.981911</td>\n",
-       "      <td>40.771706</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2010-11-24 07:46:52-05:00</td>\n",
+       "      <td>-73.962685</td>\n",
+       "      <td>40.775646</td>\n",
+       "      <td>-73.957436</td>\n",
+       "      <td>40.777767</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2013-12-27 17:35:00-05:00</td>\n",
-       "      <td>-73.987686</td>\n",
-       "      <td>40.732952</td>\n",
-       "      <td>-73.987556</td>\n",
-       "      <td>40.749565</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2011-10-31 22:19:34-04:00</td>\n",
+       "      <td>-73.996300</td>\n",
+       "      <td>40.753601</td>\n",
+       "      <td>-73.998802</td>\n",
+       "      <td>40.761101</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -122,21 +122,21 @@
       ],
       "text/plain": [
        "   fare_amount           pickup_datetime  pickup_longitude  pickup_latitude  \\\n",
-       "0         11.3 2010-04-16 13:02:00-04:00        -73.972412        40.781231   \n",
-       "1         13.3 2010-08-17 23:46:00-04:00          0.000000         0.000000   \n",
-       "2         12.9 2011-04-09 10:11:00-04:00        -74.008331        40.725842   \n",
-       "3         10.0 2012-11-26 04:49:00-05:00        -73.994148        40.751560   \n",
-       "4          8.0 2013-12-27 17:35:00-05:00        -73.987686        40.732952   \n",
+       "0          8.1 2009-01-23 02:28:00-05:00        -73.996071        40.732605   \n",
+       "1          9.0 2014-01-04 16:11:00-05:00        -73.977638        40.752346   \n",
+       "2          6.5 2015-06-21 21:54:24-04:00        -74.000076        40.728611   \n",
+       "3          4.5 2010-11-24 07:46:52-05:00        -73.962685        40.775646   \n",
+       "4          4.5 2011-10-31 22:19:34-04:00        -73.996300        40.753601   \n",
        "\n",
        "   dropoff_longitude  dropoff_latitude  passenger_count  \n",
-       "0         -73.989189         40.758373                5  \n",
-       "1           0.000000          0.000000                5  \n",
-       "2         -73.983200         40.767673                1  \n",
-       "3         -73.981911         40.771706                1  \n",
-       "4         -73.987556         40.749565                1  "
+       "0         -73.980675         40.761864                1  \n",
+       "1         -73.970390         40.768867                2  \n",
+       "2         -73.988731         40.722172                6  \n",
+       "3         -73.957436         40.777767                1  \n",
+       "4         -73.998802         40.761101                1  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
     "# `read_sample` takes ~2 minutes\n",
     "\n",
     "def read_sample(file_name, sample_size=100000):\n",
-    "    numpy.random.seed(42)\n",
+    "    np.random.seed(42)\n",
     "    n_rows = sum(1 for line in open(file_name)) - 1 #number of records in file (excludes header)\n",
     "    ix = np.array(range(1,n_rows+1))\n",
     "    skip = np.sort(np.random.choice(a=ix, size=n_rows-sample_size, replace=False)) #the 0-indexed header will not be included in the skip list\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +193,8 @@
       "pickup_datetime      100000 non-null datetime64[ns, America/New_York]\n",
       "pickup_longitude     100000 non-null float32\n",
       "pickup_latitude      100000 non-null float32\n",
-      "dropoff_longitude    100000 non-null float32\n",
-      "dropoff_latitude     100000 non-null float32\n",
+      "dropoff_longitude    99997 non-null float32\n",
+      "dropoff_latitude     99997 non-null float32\n",
       "passenger_count      100000 non-null int64\n",
       "dtypes: datetime64[ns, America/New_York](1), float32(5), int64(1)\n",
       "memory usage: 3.4 MB\n"
@@ -207,14 +207,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AMLD- Baseline Model.ipynb\r\n",
+      "Helper Notebook AMLD 2020.ipynb\r\n",
+      "Isochrone Maps.ipynb\r\n",
+      "List of Exercises for getting started at some geospatial data analysis.ipynb\r\n",
+      "ORSM Test.ipynb\r\n",
+      "README.md\r\n",
+      "Traces Visualisation.ipynb\r\n",
+      "\u001b[1m\u001b[36mdata\u001b[m\u001b[m/\r\n",
+      "\u001b[1m\u001b[36mrouter\u001b[m\u001b[m/\r\n",
+      "\u001b[31mtrain.csv\u001b[m\u001b[m*\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save as pickle to keep format\n",
     "\n",
-    "with open('data/sample_100000.csv.pickle', 'wb') as f:\n",
-    "    pickle.dump(df, f)"
+    "# with open('data/sample_100000.csv.pickle', 'wb') as f:\n",
+    "#     pickle.dump(df, f)\n",
+    "\n",
+    "# save as csv\n",
+    "df.to_csv('data/sample_100000.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save as pickle to keep format\n",
+    "\n",
+    "# with open('data/sample_100000.csv.pickle', 'rb') as f:\n",
+    "#     df = pickle.load(f)"
    ]
   },
   {
