finished way lookup prototype in notebook, still missing complete node id info lookup

--- a/RouteAnnotator.ipynb
+++ b/RouteAnnotator.ipynb
@@ -335,13 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RouteAnnotator():\n",
     "    \n",
     "    # TODO add different forms of network retrieval from OSMNx\n",
+    "    # TODO add create function that manually set speeds\n",
     "    def __init__(self, place, network_type):\n",
     "        \n",
     "        self.segment_lookup = None\n",
@@ -373,11 +374,7 @@
     "            'bridleway': 4,  #   \n",
     "            'razed': 4,      #  \n",
     "            'elevator': 0.2  #  \n",
-    "        }\n",
-    "\n",
-    "        # road - https://wiki.openstreetmap.org/wiki/Tag:highway%3Droad\n",
-    "        # crossing - https://wiki.openstreetmap.org/wiki/Tag:highway%3Dcrossing\n",
-    "        self.EXCEPTIONS = ['road', 'crossing', 'access']        \n",
+    "        }      \n",
     "\n",
     "        self.G = ox.graph_from_place(place, network_type=network_type, simplify=False) # example - 'new york, usa'\n",
     "        self.add_speeds()\n",
@@ -447,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,25 +457,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = ox.graph_from_place('new york, usa', network_type='drive')"
+    "ra.way_lookup"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = ra.segment_lookup\n",
-    "test2 = ra.way_lookup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
