--- a/RouteAnnotator.ipynb
+++ b/RouteAnnotator.ipynb
@@ -335,18 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RouteAnnotator():\n",
     "    \n",
     "    # TODO add different forms of network retrieval from OSMNx\n",
-    "    # TODO add create function that manually set speeds\n",
     "    def __init__(self, place, network_type):\n",
     "        \n",
-    "        self.segment_lookup = None\n",
-    "        self.way_lookup = None\n",
+    "        self.segment_lookup_ = None\n",
+    "        self.way_lookup_ = None\n",
     "        self.G = None\n",
     "        \n",
     "        self.HIGHWAY_SPEED_LIMITS ={   # copied from https://github.com/Project-OSRM/osrm-backend/blob/master/profiles/car.lua\n",
@@ -376,7 +375,7 @@
     "            'elevator': 0.2  #  \n",
     "        }      \n",
     "\n",
-    "        self.G = ox.graph_from_place(place, network_type=network_type, simplify=False) # example - 'new york, usa'\n",
+    "        self.G = ox.graph_from_place(place, network_type=network_type, simplify=False) \n",
     "        self.add_speeds()\n",
     "        self.build_lookups()\n",
     "        \n",
@@ -423,28 +422,28 @@
     "                    nodes2way[pair[0]] = {}\n",
     "                nodes2way[pair[0]][pair[1]] = key\n",
     "                \n",
-    "        self.segment_lookup = nodes2way\n",
-    "        self.way_lookup = way_lookup\n",
+    "        self.segment_lookup_ = nodes2way\n",
+    "        self.way_lookup_ = way_lookup\n",
     "            \n",
-    "        def segment_lookup(self, node_id_list):\n",
-    "            ways_id = []\n",
-    "            i = 0\n",
-    "            while i < len(node_id_list) - 1:\n",
-    "                ways_id.append(self.segment_lookup[node_id_list[i]][node_id_list[i+1]])\n",
-    "                i += 1\n",
-    "            return ways_id\n",
-    "        \n",
-    "        def way_lookup(self, way_id_list):\n",
-    "            ways_lookup = []\n",
-    "            for way in ways_id:\n",
-    "                ways_lookup.append(self.way_lookup[way])\n",
-    "            return ways_lookup\n",
+    "    def segment_lookup(self, node_id_list):\n",
+    "        ways_id = []\n",
+    "        i = 0\n",
+    "        while i < len(node_id_list) - 1:\n",
+    "            ways_id.append(self.segment_lookup_[node_id_list[i]][node_id_list[i+1]])\n",
+    "            i += 1\n",
+    "        return ways_id\n",
+    "\n",
+    "    def way_lookup(self, way_id_list):\n",
+    "        ways_lookup = []\n",
+    "        for way in ways_id:\n",
+    "            ways_lookup.append(self.way_lookup_[way])\n",
+    "        return ways_lookup\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,12 +452,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method RouteAnnotator.way_lookup of <__main__.RouteAnnotator object at 0x10d5d0f60>>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ra.way_lookup"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
