intro to traffic + theory

--- a/RouteAnnotator.ipynb
+++ b/RouteAnnotator.ipynb
@@ -339,15 +339,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import osmnx as ox\n",
+    "import numpy as np\n",
+    "import networkx as nx\n",
+    "\n",
+    "from itertools import combinations\n",
+    "\n",
     "class RouteAnnotator():\n",
-    "    \n",
+    "\n",
     "    # TODO add different forms of network retrieval from OSMNx\n",
     "    def __init__(self, place, network_type):\n",
-    "        \n",
+    "\n",
     "        self.segment_lookup_ = None\n",
     "        self.way_lookup_ = None\n",
+    "        self.node_lookup_ = None\n",
     "        self.G = None\n",
-    "        \n",
+    "\n",
+    "        # TODO: Need adjustent. See https://wiki.openstreetmap.org/wiki/New_York\n",
     "        self.HIGHWAY_SPEED_LIMITS ={   # copied from https://github.com/Project-OSRM/osrm-backend/blob/master/profiles/car.lua\n",
     "            'motorway':90,\n",
     "            'motorway_link':45,\n",
@@ -355,35 +363,35 @@
     "            'trunk_link':40,\n",
     "            'primary':65,\n",
     "            'primary_link':30,\n",
-    "            'secondary':55,\n",
+    "            'secondary':40, # original: 55 - changed to NY where secondary = 25 mph ~= 40 kmh\n",
     "            'secondary_link':25,\n",
     "            'tertiary':40,\n",
     "            'tertiary_link':20,\n",
     "            'unclassified':25,\n",
-    "            'residential':25,\n",
+    "            'residential':40,\n",
     "            'living_street':10,\n",
     "            'service':15,\n",
     "            'footway': 4,    # custom\n",
-    "            'path': 4,       # \n",
-    "            'pedestrian': 4, # \n",
+    "            'path': 4,       #\n",
+    "            'pedestrian': 4, #\n",
     "            'steps': 2,      #\n",
-    "            'track': 4,      #   \n",
+    "            'track': 4,      #\n",
     "            'piste': 4,      #\n",
     "            'corridor': 4,   #\n",
-    "            'bridleway': 4,  #   \n",
-    "            'razed': 4,      #  \n",
-    "            'elevator': 0.2  #  \n",
-    "        }      \n",
+    "            'bridleway': 4,  #\n",
+    "            'razed': 4,      #\n",
+    "            'elevator': 0.2  #\n",
+    "        }\n",
     "\n",
-    "        self.G = ox.graph_from_place(place, network_type=network_type, simplify=False) \n",
+    "        self.G = ox.graph_from_place(place, network_type=network_type, simplify=False) # example - 'new york, usa'\n",
     "        self.add_speeds()\n",
-    "        self.build_lookups()\n",
-    "        \n",
+    "        self._build_lookups()\n",
+    "\n",
     "    def add_speeds(self):\n",
-    "        \n",
+    "\n",
     "        for u, v, k, data in self.G.edges(data=True, keys=True):\n",
     "            if 'maxspeed' in data and type(data['maxspeed']) == str and data['maxspeed'].isdigit():\n",
-    "                continue \n",
+    "                continue\n",
     "            else:\n",
     "                if(type(data['highway']) == list): # sometimes data['highway'] comes with a list\n",
     "                    cond = [elem in self.HIGHWAY_SPEED_LIMITS for elem in data['highway']]\n",
@@ -391,18 +399,22 @@
     "                else:\n",
     "                    highway_type = data['highway']\n",
     "\n",
-    "                if(highway_type in self.HIGHWAY_SPEED_LIMITS): \n",
+    "                if(highway_type in self.HIGHWAY_SPEED_LIMITS):\n",
     "                    speed = self.HIGHWAY_SPEED_LIMITS[highway_type]\n",
     "                    data['maxspeed'] = speed\n",
-    "        \n",
-    "    def build_lookups(self):\n",
+    "\n",
+    "    def _build_lookups(self):\n",
     "        # build segment lookup\n",
     "        segment_lookup = {}\n",
+    "        segment_lengths = {}\n",
     "        way2nodes = {}\n",
+    "        way2nodes_pair = {}\n",
     "        way_lookup = {}\n",
+    "        way_segment_lengths = {}\n",
+    "        node_lookup = {}\n",
     "\n",
     "        # build segment lookup\n",
-    "        for u, v, k, data in self.G.edges(data=True, keys=True):\n",
+    "        for u, v, k, data in ra.G.edges(data=True, keys=True):\n",
     "\n",
     "            if(type(data['osmid']) != list):\n",
     "                way_ids = [data['osmid']]\n",
@@ -412,33 +424,89 @@
     "            for way in way_ids:\n",
     "                if(way not in way2nodes.keys()):\n",
     "                    way2nodes[way] = []\n",
+    "                    way2nodes_pair[way] = []\n",
     "                    way_lookup[way] = data\n",
-    "                way2nodes[way].extend([u,v])\n",
+    "                    way_segment_lengths[way] = []\n",
+    "                way2nodes[way].extend([u,v])                    # add all nodes associated to a way\n",
+    "                way2nodes_pair[way].append([u,v])               # add pair of nodes belonging to way id\n",
+    "                way_segment_lengths[way].append(data['length']) # collect way lengths to sum up afterwards\n",
     "\n",
+    "            if(u not in segment_lengths.keys()):                # store each node-node direct segment length.\n",
+    "                segment_lengths[u] = {}                         # NOT DOING ANYTHING WITH IT FOR NOW\n",
+    "            segment_lengths[u][v] = data['length']\n",
+    "\n",
+    "        # 1st FOR, build node id sequence belonging to way_id\n",
+    "        # 2nd FOR, sum segments lengths and add node id list to way lookup\n",
+    "        final_node_sequence = {}\n",
+    "        for way_id, values in way2nodes_pair.items(): # key: way_id, values: pairs of node ids\n",
+    "            relations = {}\n",
+    "            for pair in values:                       # build dict - key: node_pre - value: node post\n",
+    "                relations[pair[0]] = pair[1]\n",
+    "            keys = relations.keys()\n",
+    "            values_ = relations.values()              # if a key (node_pre) doesn't exist in values\n",
+    "            begin_key = list(keys - values_)          # it means it has only origin = way initial node\n",
+    "\n",
+    "            if(len(values) > 1 and len(begin_key) == 1): # if NOT cyclic sequence?\n",
+    "                begin_key = begin_key[0]\n",
+    "                node_sequence = [begin_key]\n",
+    "                val = relations[begin_key]\n",
+    "                try:\n",
+    "                    while(val not in node_sequence):  # run through `relations` finding the node sequence pair by pair\n",
+    "                        node_sequence.append(val)\n",
+    "                        count += 1\n",
+    "                        begin_key = val\n",
+    "                        val = relations[begin_key]\n",
+    "                except Exception as e:                # until a pair is not found in the dict anymore = exception\n",
+    "                    e                                 # do nothing in exception\n",
+    "                final_node_sequence[way_id] = node_sequence # and store node \"ordered\" list as a Way metadata\n",
+    "            else:\n",
+    "                final_node_sequence[way_id] = list(keys)[0] + list(values_)[0] # if way has only 1 node, store it as it is\n",
+    "\n",
+    "        for key, value in way_lookup.items():\n",
+    "            way_lookup[key]['length'] = np.sum(way_segment_lengths[key])\n",
+    "            way_lookup[key]['node_sequence'] = final_node_sequence[key]\n",
+    "\n",
+    "        # build dict: key1: node1, key2: node2, value: way_id between ALL pair of nodes id IN way\n",
     "        nodes2way = {}\n",
     "        for key, values in way2nodes.items():\n",
     "            for pair in combinations(values,2):\n",
     "                if(pair[0] not in nodes2way.keys()):\n",
     "                    nodes2way[pair[0]] = {}\n",
     "                nodes2way[pair[0]][pair[1]] = key\n",
-    "                \n",
-    "        self.segment_lookup_ = nodes2way\n",
-    "        self.way_lookup_ = way_lookup\n",
-    "            \n",
+    "\n",
+    "        # build dict key1: node_id, value: node_metadata\n",
+    "        for node in ra.G.nodes(data=True):\n",
+    "            node_lookup[node[0]] = node[1]\n",
+    "\n",
+    "\n",
     "    def segment_lookup(self, node_id_list):\n",
-    "        ways_id = []\n",
-    "        i = 0\n",
-    "        while i < len(node_id_list) - 1:\n",
-    "            ways_id.append(self.segment_lookup_[node_id_list[i]][node_id_list[i+1]])\n",
-    "            i += 1\n",
-    "        return ways_id\n",
+    "        if(type(node_id_list) == int):\n",
+    "            return self.segment_lookup_[node_id_list[i]][node_id_list[i+1]]\n",
+    "        else:\n",
+    "            ways_id = []\n",
+    "            i = 0\n",
+    "            while i < len(node_id_list) - 1:\n",
+    "                ways_id.append(self.segment_lookup_[node_id_list[i]][node_id_list[i+1]])\n",
+    "                i += 1\n",
+    "            return ways_id\n",
     "\n",
     "    def way_lookup(self, way_id_list):\n",
-    "        ways_lookup = []\n",
-    "        for way in ways_id:\n",
-    "            ways_lookup.append(self.way_lookup_[way])\n",
-    "        return ways_lookup\n",
-    "        "
+    "        if(type(way_id_list) == int):\n",
+    "            return self.way_lookup_[way_id_list]\n",
+    "        else:\n",
+    "            ways_lookup = []\n",
+    "            for way in way_id_list:\n",
+    "                ways_lookup.append(self.way_lookup_[way])\n",
+    "            return ways_lookup\n",
+    "\n",
+    "    def node_lookup(self, node_id_list):\n",
+    "        if(type(node_id_list) == int):\n",
+    "            return self.node_lookup_[node_id_list]\n",
+    "        else:\n",
+    "            nodes_lookup = []\n",
+    "            for node in node_id_list:\n",
+    "                nodes_lookup.append(self.node_lookup_[node])\n",
+    "            return nodes_lookup"
    ]
   },
   {
