finished docker compose v1

--- a/AMLD-2020/data/Helper Notebook AMLD 2020.ipynb
+++ b/AMLD-2020/data/Helper Notebook AMLD 2020.ipynb
@@ -27,120 +27,14 @@
     "# constants\n",
     "\n",
     "FILE_NAME = \"train.csv\"\n",
-    "SAMPLE_SIZE = 100000"
+    "SAMPLE_SIZE = 10000000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fare_amount</th>\n",
-       "      <th>pickup_datetime</th>\n",
-       "      <th>pickup_longitude</th>\n",
-       "      <th>pickup_latitude</th>\n",
-       "      <th>dropoff_longitude</th>\n",
-       "      <th>dropoff_latitude</th>\n",
-       "      <th>passenger_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8.1</td>\n",
-       "      <td>2009-01-23 02:28:00-05:00</td>\n",
-       "      <td>-73.996071</td>\n",
-       "      <td>40.732605</td>\n",
-       "      <td>-73.980675</td>\n",
-       "      <td>40.761864</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2014-01-04 16:11:00-05:00</td>\n",
-       "      <td>-73.977638</td>\n",
-       "      <td>40.752346</td>\n",
-       "      <td>-73.970390</td>\n",
-       "      <td>40.768867</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>2015-06-21 21:54:24-04:00</td>\n",
-       "      <td>-74.000076</td>\n",
-       "      <td>40.728611</td>\n",
-       "      <td>-73.988731</td>\n",
-       "      <td>40.722172</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2010-11-24 07:46:52-05:00</td>\n",
-       "      <td>-73.962685</td>\n",
-       "      <td>40.775646</td>\n",
-       "      <td>-73.957436</td>\n",
-       "      <td>40.777767</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2011-10-31 22:19:34-04:00</td>\n",
-       "      <td>-73.996300</td>\n",
-       "      <td>40.753601</td>\n",
-       "      <td>-73.998802</td>\n",
-       "      <td>40.761101</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   fare_amount           pickup_datetime  pickup_longitude  pickup_latitude  \\\n",
-       "0          8.1 2009-01-23 02:28:00-05:00        -73.996071        40.732605   \n",
-       "1          9.0 2014-01-04 16:11:00-05:00        -73.977638        40.752346   \n",
-       "2          6.5 2015-06-21 21:54:24-04:00        -74.000076        40.728611   \n",
-       "3          4.5 2010-11-24 07:46:52-05:00        -73.962685        40.775646   \n",
-       "4          4.5 2011-10-31 22:19:34-04:00        -73.996300        40.753601   \n",
-       "\n",
-       "   dropoff_longitude  dropoff_latitude  passenger_count  \n",
-       "0         -73.980675         40.761864                1  \n",
-       "1         -73.970390         40.768867                2  \n",
-       "2         -73.988731         40.722172                6  \n",
-       "3         -73.957436         40.777767                1  \n",
-       "4         -73.998802         40.761101                1  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# `read_sample` takes ~2 minutes\n",
     "\n",
@@ -179,61 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 100000 entries, 0 to 99999\n",
-      "Data columns (total 7 columns):\n",
-      "fare_amount          100000 non-null float32\n",
-      "pickup_datetime      100000 non-null datetime64[ns, America/New_York]\n",
-      "pickup_longitude     100000 non-null float32\n",
-      "pickup_latitude      100000 non-null float32\n",
-      "dropoff_longitude    99997 non-null float32\n",
-      "dropoff_latitude     99997 non-null float32\n",
-      "passenger_count      100000 non-null int64\n",
-      "dtypes: datetime64[ns, America/New_York](1), float32(5), int64(1)\n",
-      "memory usage: 3.4 MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.info(memory_usage='deep')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AMLD- Baseline Model.ipynb\r\n",
-      "Helper Notebook AMLD 2020.ipynb\r\n",
-      "Isochrone Maps.ipynb\r\n",
-      "List of Exercises for getting started at some geospatial data analysis.ipynb\r\n",
-      "ORSM Test.ipynb\r\n",
-      "README.md\r\n",
-      "Traces Visualisation.ipynb\r\n",
-      "\u001b[1m\u001b[36mdata\u001b[m\u001b[m/\r\n",
-      "\u001b[1m\u001b[36mrouter\u001b[m\u001b[m/\r\n",
-      "\u001b[31mtrain.csv\u001b[m\u001b[m*\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "%ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +92,7 @@
     "#     pickle.dump(df, f)\n",
     "\n",
     "# save as csv\n",
-    "df.to_csv('data/sample_100000.csv', index=False)\n"
+    "df.to_csv(f'data/sample_{SAMPLE_SIZE}.csv', index=False)\n"
    ]
   },
   {
